--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coffic/buddy-plugin-app-launcher",
+  "name": "@coffic/buddy-plugin-launcher",
   "version": "1.0.0",
   "description": "Buddy应用启动器插件",
   "main": "dist/index.js",
@@ -11,8 +11,7 @@
     "id": "app-launcher-plugin"
   },
   "devDependencies": {
-    "@coffic/buddy-types": "*",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.16.5",
     "typescript": "^5.8.3"
   },
   "keywords": [
@@ -34,5 +33,8 @@
   "files": [
     "dist",
     "views"
-  ]
+  ],
+  "dependencies": {
+    "@coffic/buddy-it": "^1.1.3"
+  }
 }
